objects/ASI_CRM_Volume_vs_PO__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>Volume vs. PO</relationshipLabel>
        <relationshipName>Volume_vs_PO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Latest_Contract_End_Date__c</fullName>
        <formula>ASI_CRM_Outlet_WS__r.ASI_CRM_Latest_Contract__r.ASI_CRM_CN_PO_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Latest_Contract_Start_Date__c</fullName>
        <formula>ASI_CRM_Outlet_WS__r.ASI_CRM_Latest_Contract__r.ASI_CRM_CN_PO_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_WS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet/WS</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Volume vs. PO</relationshipLabel>
        <relationshipName>Volume_vs_PO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Volume vs. PO</label>
    <listViews>
        <fullName>All_CN</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Date__c</columns>
        <columns>ASI_CRM_Outlet_WS__c</columns>
        <columns>ASI_CRM_Volume__c</columns>
        <columns>ASI_CRM_Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Volume_vs_PO__c.ASI_CRM_CN_Volume_vs_PO</value>
        </filters>
        <label>All CN</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{YY}{MM}-{0000}</displayFormat>
        <label>Volume vs. PO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volume vs. PO</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Volume_vs_PO</fullName>
        <active>true</active>
        <label>ASI_CRM_CN_Volume_vs_PO</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>